# libjam

./: .readthedocs.yaml  README.md  pyproject.toml
docs/: captain.rst  conf.py  drawer.rst  flashcard.rst  index.rst  multicommand-example.py  path.rst  secretary.rst  singlecommand-example.py  writer.rst
libjam/: __init__.py  captain.py  flashcard.py  secretary.py  writer.py
